--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: my title
+theme: minima
 author: me
 email: my-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
